<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/transaction_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="@dimen/_50sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/t_from_name"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:fontFamily="@font/armata"
                android:hint="@string/from"
                android:paddingStart="10dp"
                android:paddingEnd="3dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="50"
                android:src="@drawable/forward_arrow" />

            <TextView
                android:id="@+id/t_to_name"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:fontFamily="@font/armata"
                android:hint="@string/could_not_send"
                android:paddingStart="10dp"
                android:paddingEnd="3dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/to_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:id="@+id/transStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/armata"
                android:hint="@string/transaction_cancelled"
                android:paddingStart="10dp"
                android:paddingEnd="3dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/t_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/armata"
                android:gravity="end"
                android:hint="@string/not_set"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/t_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/armata"
                android:text="@string/date"
                android:textColor="#0099ff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/armata"
                android:text="@string/time"
                android:textAlignment="textEnd"
                android:textColor="#0099ff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>